--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                       <div class="card-body">
                         <h5 class="card-title primary-color">Disponibilidade</h5>
                         <p class="card-text secondary-color">
-                          Disponivel para atuar em projetor Front-end a qualquer momento.
+                          Disponível para atuar em projetor Front-end a qualquer momento.
                         </p>
                         <a href="#contato" class="btn btn-dark">Saber Mais</a>
                       </div>
@@ -222,7 +222,7 @@
                       <div class="card-body">
                         <h5 class="card-title primary-color">Conhecimento</h5>
                         <p class="card-text secondary-color">
-                          Já teve contato com diversas ferramentas da área de tecnología e está sempre se desenvolendo.
+                          Já teve contato com diversas ferramentas da área de tecnologia e está sempre se desenvolvendo.
                         </p>
                         <a href="#contato" class="btn btn-dark">Saber Mais</a>
                       </div>
@@ -400,7 +400,7 @@
             </h2>
               <form action="/action_page.php">
                 <div class="form-group mb-3">
-                  <label for="inputName" class="control-label">Name da Empresa</label>
+                  <label for="inputName" class="control-label">Nome da Empresa</label>
                   <input type="text" class="form-control" id="inputName" placeholder="Nome da Empresa" required>
                 </div> 
                 <div class="mb-3 mt-3">
