--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
             </h2>
               <form action="/action_page.php">
                 <div class="form-group mb-3">
-                  <label for="inputName" class="control-label">Nome da Empresa</label>
+                  <label for="inputName" class="control-label">Nome da Empresa:</label>
                   <input type="text" class="form-control" id="inputName" placeholder="Nome da Empresa" required>
                 </div> 
                 <div class="mb-3 mt-3">
@@ -408,7 +408,7 @@
                   <input type="email" class="form-control" id="email" placeholder="email@gmail.com" name="email">
                 </div>
                 <div class="mb-3">
-                  <label for="inputFone" class="control-label">Telefone</label>
+                  <label for="inputFone" class="control-label">Telefone:</label>
                   <input type="text" class="form-control" id="inputFone" placeholder="Telefone" pattern="\([0-9]{2}\)[0-9]{4,6}-[0-9]{3,4}$" required>
                 </div>
                 <div class="mb-3">
