--- a/index.html
+++ b/index.html
@@ -398,38 +398,38 @@
                 <a href="https://www.linkedin.com/in/matheus-duarte-4260771a2/" target="_blank"><i class="bi bi-linkedin"></i></a>
               </div>
             </h2>
-              <form action="/action_page.php">
+              <div>
                 <div class="form-group mb-3">
                   <label for="inputName" class="control-label">Nome da Empresa:</label>
-                  <input type="text" class="form-control" id="nome" placeholder="Nome da Empresa" required>
+                  <input type="text" class="form-control" id="inputNome" placeholder="Nome da Empresa" required>
                 </div> 
                 <div class="mb-3 mt-3">
                   <label for="email" class="form-label">Email:</label>
-                  <input type="email" class="form-control" id="email" placeholder="email@gmail.com" name="email">
+                  <input type="email" class="form-control" id="inputEmail" placeholder="email@gmail.com" name="email">
                 </div>
                 <div class="mb-3">
                   <label for="inputFone" class="control-label">Telefone:</label>
-                  <input type="text" class="form-control" id="telefone" placeholder="Telefone" pattern="\([0-9]{2}\)[0-9]{4,6}-[0-9]{3,4}$" required>
+                  <input type="text" class="form-control" id="inputTelefone" placeholder="Telefone">
                 </div>
                 <div class="mb-3">
                   <label for="comment">Escreva um texto:</label>
-                  <textarea class="form-control" rows="5" id="comentario" name="text"></textarea>
+                  <textarea class="form-control" rows="5" id="inputComentario" name="text"></textarea>
                 </div>
 
                 
-                <button type="submit" class="btn btn-primary">Enviar</button>
+                <button class="btn btn-primary" id="btnNovoEmail">Enviar</button>
                 
-              </form>
+              </divgis>
               <details class="titleEmail">
                 <summary>E-mails recebidos</summary>
                 <div class="conteudo">
                   <ul id="listaEmail">
                     <li>
                       <div class="d-flex flex-column bd-highlight mb-3">
-                        <span class="emailEnviado">IUUL</span>
+                        <span class="nomeEnviado">IUUL</span>
                         <span class="emailEnviado">IUUL@gmail.com</span>
-                        <span class="emailEnviado">(81) 91234-1234</span>
-                        <span class="emailEnviado">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid eum commodi dolorum culpa nulla! Totam qui ad, assumenda aut incidunt sit, ullam deserunt rerum excepturi perspiciatis repellat omnis nostrum quas?</span>
+                        <span class="telefoneEnviado">(81) 91234-1234</span>
+                        <span class="comentarioEnviado">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid eum commodi dolorum culpa nulla! Totam qui ad, assumenda aut incidunt sit, ullam deserunt rerum excepturi perspiciatis repellat omnis nostrum quas?</span>
                       </div>
                         <div>
                           <button class="btnAcao">
