--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                 </div>
 
                 
-                <button class="btn btn-primary" id="btnNovoEmail">Enviar</button>
+                <button class="btn btn-dark" id="btnNovoEmail">Enviar</button>
                 
               </divgis>
               <details class="titleEmail">
